samples/_failures_safe/1761089786_abdc53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3eb332a9.c: In function ‘main’:
./samples/SAFE/__tmp_3eb332a9.c:180:27: error: expected ‘;’ at end of input
  180 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_3eb332a9.c:180:21: error: expected declaration or statement at end of input
  180 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_3eb332a9.c:180:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3eb332a9.c:180:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3eb332a9.c:180:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3eb332a9.c:180:21: error: expected declaration or statement at end of input
